syntax = "proto3";

package stellar.services.cluster.v1;

import weak "google/api/annotations.proto";

import "api/services/node/v1/node.proto";
import "api/services/health/v1/health.proto";

option go_package = "github.com/ehazlett/stellar/api/services/cluster/v1;cluster";

service Cluster {
  rpc Containers(ContainersRequest) returns (ContainersResponse);
  rpc Images(ImagesRequest) returns (ImagesResponse);
  rpc Nodes(NodesRequest) returns (NodesResponse) {
    option (google.api.http).get = "/v1/cluster/nodes";
  };
  rpc Health(HealthRequest) returns (HealthResponse);
}

message ContainersRequest {
  repeated string filters = 1;
}

message ImagesRequest {}

message NodesRequest {}

message ContainersResponse {
  repeated Container containers = 1;
}

message ImagesResponse {
  repeated stellar.services.node.v1.Image images = 1;
}

message Node {
    string name = 1;
    string addr = 2;
}

message NodesResponse {
    repeated Node nodes = 1;
}

message Container {
    stellar.services.node.v1.Container container = 1;
    Node node = 2;
}

message HealthRequest {}
message NodeHealth {
  Node node = 1;
  stellar.services.health.v1.NodeHealth health = 2;
}
message HealthResponse {
  repeated NodeHealth nodes = 1;
}
